# vector-press

./: .gitignore  CLAUDE.md  README.md  example_usage.py  pyproject.toml  streamlit_demo.py  test_embedding.py
src/: config.py  main.py  streamlit_interface.py
src/vector_press/: ModelConfig.py  __init__.py  graph_nodes.py  llm_embedding_initializer.py  model_config.py  rag_processor.py
src/vector_press/agent/: __init__.py  agent.py  api_clients.py  news_api_client.py  rss_client.py  state.py  tools.py  tools_validation.py  web_search_client.py
src/vector_press/db/: __init__.py  database_uploading.py  guardian_api.py  inserting_supabase.py  supabase_db.py  supabase_setup.sql
